# Dequeue

./: .gitignore  LICENSE  Makefile  README.md  TODO  dq  eval.py  evaluator.py  lexer.py  parser.py  pyproject.toml  util.py
